[project]
name = "clmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jul29iet@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cyclopts>=3.23.0",
    "dataframely>=1.9.0",
    "polars>=1.32.3",
    "pyprojroot>=0.3.0",
    "pytest>=8.4.1",
]

[project.scripts]
clmt = "clmt.api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
